fixed header on mobile

--- a/style.css
+++ b/style.css
@@ -522,7 +522,7 @@ html {
     }
     header {
         width: 100%;
-        height: 45em;
+        height: 40em;
         margin-top: 2em;
     }
     nav ul {
